# pinker-v0

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  HANDOFF_AGENTE.md  LICENSE  MANUAL.md  Makefile  README.md  SECURITY.md  SUPPORT.md  ci_env.sh  executar.sh  manual.md  rust-toolchain.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.pinker/: doc.toml
agentes/: README.md
apps/: README.md
backup/: AGENTS.original.md
docs/: agent_state.md  apps.md  atlas.md  code_map.md  doc_rules.md  examples_index.md  expandir.md  familias_tematicas.md  future.md  handoff_auditor.md  handoff_codex.md  handoff_doc46.md  handoff_opus.md  history.md  inventario_intrinsecas.md  navigation.jsonl  parallel.md  phases.md  ponte_engine_rosa.md  roadmap.md  rosa.md  rosa_archive.md  rosa_core.md  rosa_voice_tests.md  style.md  vocabulario.md
examples/: algoritmo_avancado.pink  algoritmo_complexo.pink  asm_externo_principal_constante.pink  asm_tipo_nao_suportado_seta.pink  cfg_chamada.pink  cfg_if_else.pink  cfg_if_sem_else.pink  cfg_nulo.pink  chamada_args_falho.pink  check_alias_tipo_inexistente.pink  check_boot_entry_livre_sem_principal.pink  check_boot_entry_livre_valido.pink  check_campo_valido.pink  check_cast_cfg_indisponivel.pink  check_cast_inteiro_valido.pink  check_cast_invalido_logica.pink  check_continuar_fora_loop.pink  check_freestanding_invalido_fora_topo.pink  check_freestanding_valido.pink  check_indexacao_indice_nao_inteiro.pink  check_indexacao_valida.pink  check_inline_asm_invalido_vazio.pink  check_inline_asm_multilinha.pink  check_inline_asm_valido.pink  check_kernel_minimo_fase59_valido.pink  check_peso_alinhamento_array.pink  check_peso_alinhamento_escalar.pink  check_peso_alinhamento_ninho.pink  check_peso_tipo_inexistente.pink  check_quebrar_fora_loop.pink  check_volatile_invalido.pink  check_volatile_valido.pink  complexo-algo.pink  emit_chamada.pink  emit_temporarios.pink  (+260 more)
runtime/pinker_rt/: Cargo.toml
runtime/pinker_rt/src/: lib.rs
src/: abstract_machine.rs  (+35 more)
(+130 files in other folders)
